# TripoSplat

./: README.md  pyproject.toml  run_gradio.py  triposplat.py
src/tripo_splat/: __init__.py  triposplat.py  weights.py
