[project]
name = "tripo-splat"
version = "0.1.0"
description = "Forked TripoSplat (rmbg removed) — single image to 3D Gaussians"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "safetensors", "pillow", "tqdm", "huggingface_hub"]

[project.optional-dependencies]
# install torch/torchvision yourself per your CUDA; this is a convenience extra
torch = ["torch", "torchvision"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tripo_splat"]